; ModuleID = '/home/carl/AnghaBench/linux/sound/aoa/codecs/extr_onyx.c_onyx_open.c'
source_filename = "/home/carl/AnghaBench/linux/sound/aoa/codecs/extr_onyx.c_onyx_open.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.codec_info_item = type { %struct.onyx* }
%struct.onyx = type { i32, i32 }
%struct.snd_pcm_substream = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.codec_info_item*, %struct.snd_pcm_substream*)* @onyx_open to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @onyx_open(%struct.codec_info_item* %0, %struct.snd_pcm_substream* %1) #0 {
  %3 = alloca %struct.codec_info_item*, align 8
  %4 = alloca %struct.snd_pcm_substream*, align 8
  %5 = alloca %struct.onyx*, align 8
  store %struct.codec_info_item* %0, %struct.codec_info_item** %3, align 8
  store %struct.snd_pcm_substream* %1, %struct.snd_pcm_substream** %4, align 8
  %6 = load %struct.codec_info_item*, %struct.codec_info_item** %3, align 8
  %7 = getelementptr inbounds %struct.codec_info_item, %struct.codec_info_item* %6, i32 0, i32 0
  %8 = load %struct.onyx*, %struct.onyx** %7, align 8
  store %struct.onyx* %8, %struct.onyx** %5, align 8
  %9 = load %struct.onyx*, %struct.onyx** %5, align 8
  %10 = getelementptr inbounds %struct.onyx, %struct.onyx* %9, i32 0, i32 0
  %11 = call i32 @mutex_lock(i32* %10)
  %12 = load %struct.onyx*, %struct.onyx** %5, align 8
  %13 = getelementptr inbounds %struct.onyx, %struct.onyx* %12, i32 0, i32 1
  %14 = load i32, i32* %13, align 4
  %15 = add nsw i32 %14, 1
  store i32 %15, i32* %13, align 4
  %16 = load %struct.onyx*, %struct.onyx** %5, align 8
  %17 = getelementptr inbounds %struct.onyx, %struct.onyx* %16, i32 0, i32 0
  %18 = call i32 @mutex_unlock(i32* %17)
  ret i32 0
}

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
